Further fix for #110 eliminating the use of the URLDecoder.decode().
Upon further review, the attempt to decode a URL path via the URL
unescaping functions intended for escaping HTML Forms submission is
just wrong, originating as far as I can tell in my initial Pathname
commit. There may be issues where we should treat strings of the form
'file:URI' with real URI escaping rules to remove %bb byte-encoding,
but these rules might well confuse those attempting to include '%' in
files, so we leave that to more formal specification.

Untabify Pathname.java.

Tests for correct parsing of device under Windows.